# tauri-numis

./: .gitignore  README.md  package.json  tsconfig.json
src/: App.svelte  ProductCarousel.svelte  SwapImage.svelte  product.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: build.rs  commands.rs  main.rs  product.rs  scraper.rs
