[package]
name = "app"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
anyhow = "1.0.52"
futures = "0.3.19"
once_cell = "1.9.0"
reqwest = "0.11.9"
scraper = "0.12.0"
serde_json = "1.0.74"
serde = { version = "1.0.133", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all", "shell-open", "system-tray"] }
tokio = { version = "1.15.0", default-features = false }
uuid = "0.8.2"
