[package]
name = "app"
version = "1.0.0"
description = "tauri-numis"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = true

[build-dependencies]
tauri-build = { version = "1.0.0-rc.2", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
anyhow = "1.0.53"
futures = "0.3.21"
once_cell = "1.9.0"
reqwest = "0.11.9"
scraper = "0.12.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
tauri = { version = "1.0.0-rc.2", features = ["api-all", "system-tray"] }
tokio = { version = "1.16.1", default-features = false }
uuid = "0.8.2"
